@@ -90,7 +90,7 @@ public class SelectNodeDciDialog extends Dialog
 		
 		dciList = new DciList(null, dialogArea, SWT.BORDER, null, "SelectNodeDciDialog.dciList", dcObjectType);  //$NON-NLS-1$
 		dciList.setDcObjectType(dcObjectType);
-		dciList.getViewer().addDoubleClickListener(new IDoubleClickListener() {
+		dciList.addDoubleClickListener(new IDoubleClickListener() {
 			@Override
 			public void doubleClick(DoubleClickEvent event)
 			{
