@@ -7,6 +7,10 @@ AbstractSelectParamDlg_Warning=Warning
 AbstractSelectParamDlg_WarningText=You must select parameter from the list\!
 ApplyTemplate_JobError=Cannot apply data collection template
 ApplyTemplate_JobTitle=Apply template
+ClearCollectedData_ConfirmationText=All collected data for selected data collection items will be deleted. Proceed?
+ClearCollectedData_ConfirmDialogTitle=Clear Collected Data
+ClearCollectedData_ErrorText=Cannot clear collected data
+ClearCollectedData_TaskName=Clear collected data
 CreateInterfaceDciDialog_BadPollingInterval=Please enter polling pollingInterval as integer in range 2 .. 10000
 CreateInterfaceDciDialog_BadRetentionTime=Please enter retention time as integer in range 1 .. 10000
 CreateInterfaceDciDialog_Data=Data
